# trading

./: .gitignore  AGENTS.md  CLAUDE.md  CURSOR.md  README.md  bun.lockb  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
._vscode/: settings.json
.claude/: CLAUDE.md
.claude/agents/: codebase-explorer.md  implementer.md  orchestrator.md  refactorer.md  reviewer-documenter.md  test-writer.md  web-researcher.md
.cursor/: environment.json
.cursor/code-challenge/: gemini-README.md  opus-README.md
.cursor/rules/: project.mdc
.github/: AGENTS-QUICK-REFERENCE.md  WORKFLOW_COMPARISON.md  copilot-instructions.md
.github/agents/: README.md  codebase-explorer.agent.md  implementer.agent.md  orchestrator.agent.md  refactorer.agent.md  reviewer-documenter.agent.md  test-writer.agent.md  web-researcher.agent.md
.github/instructions/: common-lib.instructions.md  (+3 more)
.husky/: pre-commit  pre-push
apps-marketing/: AGENTS.md
apps/backtest-python/: AGENTS.md  README.md  pyproject.toml
apps/backtest-python/notebooks/: 01_explore_canonical.ipynb
apps/backtest-python/src/backtest/: cli.py
apps/backtest-python/src/backtest/db/: backtests.py  candles.py  connection.py  features.py  models.py  predictions.py
apps/backtest-python/src/backtest/features/: builder.py  registry.py
apps/backtest-python/tests/: test_builder.py  test_registry.py
docs/: WEBSOCKET_SETUP.md
scripts/: check-postgres-client-version.sh  cloud-agent-install.sh  cloud-agent-start.sh  create-app.js  doppler-sync-env.sh  fetch-infisical.mjs  install-android-sdk.sh
(+1869 files in other folders)
