[project]
name = "backtest"
version = "0.0.1"
description = "Downstream Python research app: features, backtests, ML on canonical candle tables"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "trading monorepo" }]

dependencies = [
  "psycopg[binary,pool]>=3.2",
  "pandas>=2.2",
  "numpy>=2.0",
  "polars>=1.0",
  "pyarrow>=17.0",
  "scikit-learn>=1.5",
  "lightgbm>=4.5",
  "matplotlib>=3.9",
  "typer>=0.12",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "ipykernel>=6.29",
  "jupyterlab>=4.2",
]

[project.scripts]
backtest = "backtest.cli:app"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backtest"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Typer CLI definitions evaluate Option(...) as default values by design.
"src/backtest/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
